fatto grafica livello

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="livello_5">livello 5</string>
     <string name="livello_4">livello 4</string>
     <string name="livello_3">livello 3</string>
+    <string name="home">HOME</string>
+    <string name="prossimo">prossimo</string>
+    <string name="se_l_arcivescovo_di_costantinopoli_si_disarcivescostantinopolizzasse_vi_disarcivescostantinopolizzereste_voi_per_disarcivescostantinopolizzare_lui">Se l\'arcivescovo di Costantinopoli si disarcivescostantinopolizzasse, vi disarcivescostantinopolizzereste voi per disarcivescostantinopolizzare lui</string>
 </resources>
