--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="home">HOME</string>
     <string name="prossimo">prossimo</string>
     <string name="se_l_arcivescovo_di_costantinopoli_si_disarcivescostantinopolizzasse_vi_disarcivescostantinopolizzereste_voi_per_disarcivescostantinopolizzare_lui">Se l\'arcivescovo di Costantinopoli si disarcivescostantinopolizzasse, vi disarcivescostantinopolizzereste voi per disarcivescostantinopolizzare lui</string>
+    <string name="_0">0%</string>
 </resources>
